[package]
name = "cairo-toolchain-xtasks"
version = "1.2.2"
edition = "2024"
rust-version = "1.88.0"

authors = ["Software Mansion <contact@swmansion.com>"]
description = "Build scripts shared between all Cairo Toolchain projects maintained by Software Mansion."
license = "MIT"
repository = "https://github.com/software-mansion-labs/cairo-toolchain-xtasks"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
semver = "1"
toml_edit = "0.23.2"
xshell = "0.2.7"
